Implemented getPopularProductsForBar() in ProductServiceImpl in the api-gateway module. Changed getProductsForBar method in ProductServiceImpl of the product-service module. Now it requests an ids of most popular products from statistic service and gets them from db.